Fix overflow of file tabs (#2708)

--- a/app/css/components/iteration-pane.css
+++ b/app/css/components/iteration-pane.css
@@ -6,6 +6,7 @@
         @apply flex items-center;
         @apply bg-backgroundColorB;
         @apply border-b-1 border-borderColor7;
+        @apply overflow-y-hidden overflow-x-auto;
 
         & .c-tab {
             @apply grid place-items-center;
